# human-connector

./: .env  README.md  pyproject.toml  requirements.txt
demo/: _shim.py  demo.py
flows/: fulfillment_cell.flow.json
memory/: MEMORY.md  ifuri-contract-layer-state.md  urirun-cdp-login-autonomy.md
urirun_connector_human/: __init__.py  _env.py  _envelope.py  bindings.json  connector.py  episode.py  handlers.py  store.py  surface.py  urirun_bridge.py
